<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical"
    android:padding="10dip" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        layout="@layout/view_bar_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/name_tag"
            android:hint="@string/name_text"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/suo"
            android:hint="@string/pwd_text"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_bg" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:enabled="false"
                android:hint="@string/sex_text"
                android:paddingLeft="5dip"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/text_h3" />

            <RadioGroup
                android:id="@+id/radio_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:button="@drawable/radiobutton_selector"
                    android:text="@string/boy_text"
                    android:textColor="@color/base_text_color" />

                <RadioButton
                    android:id="@+id/radio_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:button="@drawable/radiobutton_selector"
                    android:text="@string/girl_text"
                    android:textColor="@color/base_text_color" />
            </RadioGroup>
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/suo"
            android:hint="@string/repwd_text"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/text_h3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_bg"
            android:padding="0dip" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/phone_text"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="5dip" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dip"
                android:background="@drawable/base_button_selector"
                android:drawablePadding="5dip"
                android:drawableRight="@drawable/phone_white"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/get_code_text"
                android:textColor="@color/white" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/password"
            android:hint="@string/code_text"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip" >

            <Button
                style="@style/UserButtonStyle"
                android:text="@string/register" />

            <Button
                style="@style/UserButtonStyle"
                android:layout_alignParentRight="true"
                android:text="@string/reset" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>