<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical"
    android:padding="10dip" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        layout="@layout/view_bar_head" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3" >

        <TextView
            android:id="@+id/introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/introduce"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/text_h1" />

        <RelativeLayout
            android:id="@+id/layout_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/introduce"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dip"
            android:background="@drawable/about_circle"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_edition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/company_eng_name"
                android:textColor="@color/button_bg_color"
                android:textSize="@dimen/text_h3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_edition"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:text="@string/app_version"
                android:textColor="@color/button_bg_color"
                android:textSize="@dimen/text_h3" />
        </RelativeLayout>

        <Button
            android:layout_width="160dip"
            android:layout_height="@dimen/user_button_height"
            android:layout_below="@+id/layout_tag"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dip"
            android:background="@drawable/base_button_selector"
            android:gravity="center"
            android:text="@string/check_update"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/server_phone"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/text_h3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="50dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/copyRight"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/text_h5" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>