<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical"
    android:padding="10dip" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        layout="@layout/view_bar_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="20dip"
            android:background="@drawable/edit_bg" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/phone_text"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="5dip" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/base_button_selector"
                android:drawablePadding="5dip"
                android:drawableRight="@drawable/phone_white"
                android:gravity="center"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/get_code_text"
                android:textColor="@color/white" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/password"
            android:hint="@string/code_text"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_edit_height"
            android:layout_marginTop="20dip"
            android:background="@drawable/base_button_selector"
            android:text="@string/new_password_to_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h3" />
    </LinearLayout>

</LinearLayout>